backend/youtube-comment-analysis/src/main/java/com/example/youtube_comment_analysis/error/ChannelAnalysisException.java
package com.example.youtube_comment_analysis.error;

public class ChannelAnalysisException extends RuntimeException {
    public ChannelAnalysisException(String msg, Throwable cause) { super(msg, cause); }
}
